--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.456.0",
     "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
